--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aws-lambda-router",
-  "version": "0.8.2",
+  "name": "enhanced-aws-lambda-router",
+  "version": "0.1.0",
   "description": "AWS lambda router",
   "main": "index.js",
   "types": "index.d.ts",
